<resources>
    <string name="app_name">Hisaab</string>
    <string name="select_picture_optional">Select Picture (optional)</string>
    <string name="register_lets_get_you">Let get you started in 2 simple steps!!</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="phone_hint">Your Mobile Number</string>
    <string name="btn_signup">Verify Through OTP</string>
    <string name="register_profile_title1">Tell us a bit more about yourself,</string>
    <string name="register_profile_title2">while we validate your mobile number</string>
    <string name="date_hint">01/01/1990</string>
    <string name="gender_hint">Gender</string>
    <string name="city_hint">City</string>
    <string name="Email_hint">Email</string>
    <string name="btn_later">Later</string>
    <string name="btn_done">Done</string>
    <string name="dialog_select_gender">Select Gender</string>
    <string name="dialog_male">Male</string>
    <string name="dialog_female">Female</string>
    <string name="dialog_other">Other</string>
    <string name="dialog_select_profile_pic">Select Profile Pic</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="no_dues">No Dues Yet!!</string>
    <string name="no_expense">No Expenses Yet!!</string>
    <string name="no_groups">No Groups Created Yet!!</string>
    <string name="recent_title">Recent Activities</string>
    <string name="profile_title">Profile</string>
    <string name="profile_username">Username</string>
    <string name="BACK">BACK</string>
    <string name="create_group_title">Create Group</string>
    <string name="add_group_title">Group Name</string>
    <string name="add_comment">Comment (Optional)</string>
    <string name="add_group_photo">Add Group Photo (optional)</string>
    <string name="add_group_sharedwith">Shared With</string>
    <string name="imggroup">imgGroup</string>
    <string name="btn_cross">btn_cross</string>
    <string name="add_title">Add Dues</string>
    <string name="btn_next">Next</string>
    <string name="add_title1">Review Dues</string>
    <string name="edit_title">Edit Dues</string>
    <string name="add_next">NEXT</string>
    <string name="add_done">DONE</string>
    <string name="add_food">Food</string>
    <string name="add_drinks">Drinks</string>
    <string name="add_movie">Movies</string>
    <string name="add_outing">Outing</string>
    <string name="add_personal">Personal</string>
    <string name="add_others">Other</string>
    <string name="add_dues_comment">Detail (Optional)</string>
    <string name="add_due_photo">Add Due Photo (optional)</string>
    <string name="add_due_name">Add Due Name</string>
    <string name="due_name">Due Name</string>
    <string name="add_amount">Amount</string>
    <string name="add_sharedwith">Shared With</string>
    <string name="add_sharedwithtap">(Tap on amounts to split unevenly)</string>
    <string name="add_toggle_tag">Split Even</string>
    <string name="add_othe_title">Add Category</string>
    <string name="username">Username</string>
    <string name="profileimage">ProfileImage</string>
    <string name="done">Done</string>
    <string name="btn_back">btn_back</string>
    <string name="app_logo">app_logo</string>
    <string name="editbtn">editbtn</string>
    <string name="comments">Comments</string>
    <string name="add_group_simplfy">Simplify in-group expense</string>
    <string name="dialog_verify_otp">Verify OTP</string>
    <string name="amount">Amount</string>
    <string name="created_by">Created By You</string>
    <string name="group_detail_title">Group Details</string>
    <string name="summary">SUMMARY</string>
    <string name="edit">EDIT</string>
    <string name="group_summary">Group Summary</string>
    <string name="review_dues_title">Review Dues</string>
    <string name="add_category">Add Category</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="due_detail_title">Due Detail</string>
    <string name="settle">Settle</string>
    <string name="remind">Remind</string>
    <string name="dialog_infromText">Hey! I just wanted to inform you that I shall Pay</string>
    <string name="dialog_days">Days</string>
    <string name="dialog_send">Send</string>
    <string name="contact_title">Contact</string>
    <string name="symbol_rupee">₹</string>
    <string name="change_admin">(Change Admin)</string>
    <string name="split_even">Split Even</string>
    <string name="phone">Phone Number</string>
    <string name="email">username@domain.com"</string>
    <string name="total_group_dues">Total Group Dues</string>
    <string name="you_paid_total">You Paid (Total)</string>
</resources>
