<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editAddCategory"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="#e2dfda"
        android:gravity="center"
        android:hint="@string/add_category"
        android:inputType="text"
        android:maxLength="10"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/darkgray"
        android:textColorHint="@color/davy_grey"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAddCategory"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_cancel"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e2dfda" />

        <Button
            android:id="@+id/btnDialogOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_ok"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
