<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/dialog_infromText"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="₹"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dialog_edittext"
                android:hint="@string/add_amount"
                android:inputType="number"
                android:textColor="@color/darkgray"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="in"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editdate"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dialog_edittext"
                android:inputType="date"
                android:maxLength="3"
                android:textColor="@color/darkgray"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/dialog_days"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_title"
        android:orientation="horizontal">

        <Button
            android:id="@id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_cancel"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:id="@id/view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_send"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
