<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/empty_back">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:text="@string/add_title"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="10dp"
                    android:text="@string/btn_next"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/btn_cross"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:contentDescription="@string/btn_cross"
                    android:src="@drawable/ic_clear_white_24dp"
                    android:visibility="visible" />

            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/empty_back">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/editbox"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/imageDue"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop"
                            fresco:backgroundImage="@color/colorPrimaryDark"
                            fresco:placeholderImage="@drawable/icon_group"
                            fresco:placeholderImageScaleType="fitCenter"
                            fresco:roundAsCircle="true" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txtPhotoUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/add_due_photo"
                        android:textColor="@color/darkgray"
                        android:textSize="16sp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edit_layout_due_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_due_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_due_name"
                            android:inputType="text"
                            android:textColor="@color/darkgray"
                            android:textColorHint="@color/darkgray"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_comment"
                            android:inputType="text"
                            android:textColor="@color/darkgray"
                            android:textColorHint="@color/darkgray"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>