<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/ImageLayout"
            android:layout_width="45dp"
            android:layout_height="45dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/friendImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                fresco:backgroundImage="@color/colorPrimaryDark"
                fresco:placeholderImage="@drawable/profile_pic_home"
                fresco:placeholderImageScaleType="fitCenter"
                fresco:roundAsCircle="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtContactNameSplitAdapter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:layout_toRightOf="@id/ImageLayout"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:singleLine="false"
            android:textColor="@color/darkgray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rupeesymbol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical"
                android:text="@string/symbol_rupee"
                android:textColor="@color/darkgray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editAmountSplitAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:background="@color/white"
                android:hint="@string/add_amount"
                android:inputType="numberDecimal"
                android:textColor="@color/darkgray"
                android:textColorHint="@color/darkgray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
